        catalogs by default for translation.  Old-style translation
        services such as Localizer or PlacelessTranslationService are
        still supported as fall-backs.  See Products/Five/doc/i18n.txt
        for more information.

      - Switched to the new improved test runner from Zope 3.  Run
        test.py with -h to find out more.

    Bugs Fixed

      - OFS ObjectManager: Fixed list_imports() to tolerate missing
        import directories.

      - Collector #1621, 1894:  Removed support for use of long-deprecated
        'whrandom' module.

      - OFS PropertySheets / webdav: Fixed dav__resourcetype.
        __dav_collection__ with a false value was overridden by
        isAnObjectManager.

    Other

      - AccessControl.User: Use a better __repr__.

      - ZSQLMethod.manage_main: Moved the error message that warns of a
        non-existing or closed database connection next to the Connection ID
        dropdown and present it using red to increase its visibility.

      - The ImageFile module has finally been deprecated for good and
        will be removed in Zope 2.11.  Use App.ImageFile instead.

  after Zope 2.8.1

      - The '@' character is now allowed in object ids (RFC 1738 allows it).

    Bugs Fixed

      - If a content object implemented any in-place numeric operators, 
        untrusted code could call them, thus modifying the content.

      - If Python 2.4 is used, despite the fact that Python 2.4 is
        unsupported, untrusted code could use generator expressions to
        gain access to container items.

      - Collector #1895: testrunner: omitting the 'var' from recursive
        directory walking

      - OFS.Image.manage_FTPget() would str() it's .data attribute,
        potentially loading the whole file in memory as a
        string. Changed to use RESPONSE.write() iterating through the
        Pdata chain, just like index_html().

      - Collector #1863: Prevent possibly sensitive information to leak via