@@ -120,6 +120,9 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #1976: FTP STOR command would load the file being
+        uploaded in memory. Changed to use a TemporaryFile.
+
       - OFS ObjectManager: Fixed list_imports() to tolerate missing
         import directories.
 
